plugins {
    id 'application'
    id 'java-test-fixtures'
    id 'antlr'
}

application {
    mainClass = 'org.smoothbuild.cli.Main'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test).configureEach {
     jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec).configureEach {
     jvmArgs += "--enable-preview"
}

generateGrammarSource {
    arguments += ["-visitor"]
}

dependencies {
    implementation libs.guava
    implementation libs.guice
    implementation libs.okio
    implementation libs.picocli
    implementation libs.zip4j

    antlr libs.antlr4

    testFixturesApi libs.guava
    testFixturesApi libs.guice
    testFixturesApi libs.junit.jupiter.api
    testFixturesApi libs.mockito
    testFixturesApi libs.okio
    testFixturesApi libs.truth

    testImplementation libs.guava.testlib
    testRuntimeOnly libs.junit.jupiter.engine
    testImplementation libs.junit.jupiter.api
    testImplementation libs.junit.jupiter.params
    testImplementation libs.mockito
    testImplementation libs.truth
}

def fatJar = tasks.register('fatJar', Jar) {
    manifest {
        attributes = []
    }
    archiveBaseName = 'smooth'
    dependsOn configurations.runtimeClasspath
    dependsOn sourceSets.main.output
    from sourceSets.main.output
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect {
            zipTree(it).matching {
                exclude "META-INF/**", "LICENSE"
            }
        }
    }
}
tasks.assemble.dependsOn(fatJar)

test {
    useJUnitPlatform()
}
